Fix letter-spacing

--- a/blocks/button.css
+++ b/blocks/button.css
@@ -10,7 +10,7 @@
   line-height: 1.5;
   font-size: 18px;
   font-weight: 700;
-  letter-spacing: 0.04;
+  letter-spacing: 0.04px;
   text-decoration: none;
   justify-content: center;
   text-align: center;
