--- a/blocks/navigation.css
+++ b/blocks/navigation.css
@@ -26,7 +26,7 @@
   font-size: 16px;
   line-height: 1.5;
   font-style: italic;
-  letter-spacing: 0.04
+  letter-spacing: 0.04px;
 }
 
 .navigation__item::after {
